--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cypress-plugin-snapshots",
-  "version": "1.4.4",
+  "version": "1.4.5",
   "description": "Cypress snapshot functionality for data",
   "homepage": "https://github.com/meinaart/cypress-plugin-snapshots",
   "repository": {
@@ -41,34 +41,35 @@
     "test": "jest & npm --prefix cypress run cy:run"
   },
   "dependencies": {
-    "diff2html": "^2.7.0",
-    "fs-extra": "^7.0.1",
-    "image-size": "^0.7.2",
-    "jimp": "^0.10.3",
-    "js-base64": "^2.5.1",
-    "lodash": "^4.17.13",
-    "pixelmatch": "^4.0.2",
-    "pngjs": "^3.3.3",
-    "prettier": "^1.16.4",
-    "rimraf": "^2.6.3",
-    "sanitize-filename": "^1.6.1",
-    "socket.io": "^2.2.0",
-    "socket.io-client": "^2.2.0",
-    "source-map-support": "^0.5.10",
+    "cypress-plugin-snapshots-test": "file:cypress",
+    "diff2html": "^3.1.18",
+    "fs-extra": "^9.0.1",
+    "image-size": "^0.9.3",
+    "jimp": "^0.16.1",
+    "js-base64": "^3.6.0",
+    "lodash": "^4.17.20",
+    "pixelmatch": "^5.2.1",
+    "pngjs": "^6.0.0",
+    "prettier": "^2.2.1",
+    "rimraf": "^3.0.2",
+    "sanitize-filename": "^1.6.3",
+    "socket.io": "^3.0.5",
+    "socket.io-client": "^3.0.5",
+    "source-map-support": "^0.5.19",
     "unidiff": "1.0.2"
   },
   "peerDependencies": {
-    "cypress": "^4.5.0"
+    "cypress": "^6.2.1"
   },
   "devDependencies": {
-    "eslint": "^5.14.1",
-    "eslint-config-airbnb-base": "^13.1.0",
-    "eslint-config-prettier": "^4.0.0",
-    "eslint-plugin-cypress": "^2.2.1",
-    "eslint-plugin-import": "^2.16.0",
-    "eslint-plugin-jest": "^22.3.0",
-    "jest": "^24.1.0",
-    "rewire": "^4.0.1"
+    "eslint": "^7.17.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-config-prettier": "^7.1.0",
+    "eslint-plugin-cypress": "^2.11.2",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jest": "^24.1.3",
+    "jest": "^26.6.3",
+    "rewire": "^5.0.0"
   },
   "prettier": {
     "printWidth": 100,
